--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -28,8 +28,8 @@ If workflows are running or have previously run on your model, you can:
 - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
     - **Scheduled** — Workflows slated to run in the future.
-    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
-    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd)]
+    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/workflow-step-types.qmd)]
     - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
     - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
@@ -54,8 +54,8 @@ If workflows are running or have previously run on your finding, you can:
 - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
     - **Scheduled** — Workflows slated to run in the future.
-    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
-    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd)]
+    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/workflow-step-types.qmd)]
     - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
     - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
