--- a/site/guide/workflows/_workflow-states.qmd
+++ b/site/guide/workflows/_workflow-states.qmd
@@ -1,7 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Workflow states are statuses unique to a specific workflow, discrete from model stages.^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)]
-
-#### Add workflow states
+### Add workflow states
 
 Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step,^[[Configure workflow steps](/guide/workflows/configure-workflows.qmd#configure-workflow-steps)] or via the **{{< fa gear >}} Settings** page:
 
@@ -22,7 +20,7 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 
 1. Click **Save** to create the workflow state.
 
-#### Edit workflow states
+### Edit workflow states
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -41,7 +39,7 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 
 1. Click **Save** to apply your changes.
 
-#### Delete workflow states
+### Delete workflow states
 
 ::: {.callout-important title="Workflow state deletion is permanent."}
 If a state is or was previously in use  on a workflow within a {{< fa wifi >}} Workflow State Change step, the state cannot be deleted.
@@ -68,6 +66,6 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 :::: {.content-hidden unless-format="revealjs"}
 Workflow states are statuses unique to a specific workflow, discrete from model stages.
 
-Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step, or [via the **{{< fa gear >}} Settings** page](/guide/workflows/setting-up-workflows.qmd#workflow-states){target="blank"}.
+Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step, or [via the **{{< fa gear >}} Settings** page](/guide/workflows/workflow-states.qmd){target="blank"}.
 
 ::::
