--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -1,21 +1,18 @@
 :::: {.content-visible unless-format="revealjs"}
-::: {.panel-tabset}
 
-### Transitions
-
-#### {{< fa cube >}} Model Stage Change
+### {{< fa cube >}} Model Stage Change
 
 - Transitions a model into another stage.
 - Requires available model stages associated with the workflow.^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)]
 
 | Field | Description |
 |---:|---|
-| [when these conditions are met]{.smallcaps} (optional) | Add conditional requirements to qualify for this step.^[ [Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]  |
+| [when these conditions are met]{.smallcaps} (optional) | Add conditional requirements to qualify for this step.^[ [Conditional requirements](/guide/workflows/conditional-requirements.qmd#model-stage-change-optional)]  |
 | [set model stage to]{.smallcaps} | Select the model stage to transition to. |
 : **{{< fa cube >}} Model Stage Change** step configuration {.hover tbl-colwidths="[40,60]"}
 
-#### {{< fa wifi >}} Workflow State Change
-Transitions the workflow into another workflow state.^[[Workflow states](/guide/workflows/setting-up-workflows.qmd#workflow-states)]
+### {{< fa wifi >}} Workflow State Change
+Transitions the workflow into another workflow state.^[[Workflow states](/guide/workflows/workflow-states.qmd)]
 
 | Field | Description |
 |---:|---|
@@ -23,40 +20,37 @@ Transitions the workflow into another workflow state.^[[Workflow states](/guide/
 | [progress]{.smallcaps} | Indicate the progress of the workflow at this transition into the next state. |
 : **{{< fa wifi >}} Workflow State Change** step configuration {.hover tbl-colwidths="[30,70]"}
 
-### Actions
-
-#### {{< fa arrow-pointer >}} User Action v2
+### {{< fa arrow-pointer >}} User Action v2
 
 Creates a button that performs an action on behalf of the user.
 
 | Field | Description |
 |---:|---|
-| [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]  |
+| [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd#user-action-v2-optional)]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
 | [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^step-types-1]  |
 | [user action deadline]{.smallcaps} (optional) | Include a deadline for when users should complete this action by.^[Toggle **Enable deadline** on to configure a deadline.] |
 | [optional fields]{.smallcaps} (optional) | Include optional inventory fields alongside your action.[^step-types-1]  |
 : **{{< fa arrow-pointer >}} User Action v2** step configuration {.hover tbl-colwidths="[40,60]"}
 
-#### {{< fa users >}} Approval
+### {{< fa users >}} Approval
 
 Display a preconfigured message to users in the selected **[approval group]{.smallcaps}**.
 
-- Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+- Select from either **User Roles**, **Model Stakeholder Types**, or either **User Role** or **User Type** inventory field.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd#approval-required)]
 - Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^step-types-2]
 
 | Field | Description |
 |---:|---|
 | [approval group]{.smallcaps}  | Select the roles, stakeholders, or user fields responsible for approval. |
 | [fields to review]{.smallcaps} (optional) | Select the model inventory fields shown to approvers for read-only review. |
-| Approval Message | When your workflow reaches this {{< fa users >}} Approval step, the selected [approval group]{.smallcaps}  will shown this message.^[Enter in a **[title]{.smallcaps}** and a **[message]{.smallcaps}** to display.] |
+| Approval Message | When your workflow reaches this {{< fa users >}} Approval step, the selected [approval group]{.smallcaps} is shown this message.^[Enter in a **[title]{.smallcaps}** and a **[message]{.smallcaps}** to display.] |
 : **{{< fa users >}} Approval** step configuration {.hover tbl-colwidths="[35,65]"}
 
-#### {{< fa bullhorn >}} Broadcast
+### {{< fa bullhorn >}} Broadcast
 
-Send email notifications to users in selected groups.
-
-Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+- Send email notifications to users in selected groups.
+- Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd#broadcast-required)]
 
 | Field | Description |
 |---:|---|
@@ -65,9 +59,7 @@ Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional 
 | [message]{.smallcaps} | Enter the body of the email.[^step-types-3] |
 : **{{< fa bullhorn >}} Broadcast** step configuration {.hover tbl-colwidths="[25,75]"}
 
-### Conditional
-
-#### {{< fa maximize >}} Condition Branch
+### {{< fa maximize >}} Condition Branch
 
 - Allows diverging paths based on conditional requirements.
 - A `default` branch will be automatically included as a catch-all `else` path to ensure that your conditional logic is complete.
@@ -79,7 +71,7 @@ Workflows cannot be saved until condition branches are connected to other steps.
 To configure a condition branch:
 
 1. On the Configure Condition Branch modal, click **{{< fa plus >}} Add Branch**.
-2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)] that apply to this path.
+2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd#condition-branch-required)] that apply to this path.
 3. Continue with steps 1 and 2 until your conditional branch logic is complete.
 
     To remove a path, click **{{< fa ellipsis-vertical >}}** and select **{{< fa trash-can >}} Remove Path**.
@@ -87,9 +79,9 @@ To configure a condition branch:
 
     Proceed with linking the Condition Branch with your subsequent steps.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
 
-#### {{< fa clock >}} Wait
+### {{< fa clock >}} Wait
 
-- Creates a time condition for displaying next available action.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+- Creates a time condition for displaying next available action.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd#wait-required)]
 - Used to enforce a time delay or a calendar date milestone.
 
 ::: {.callout title="Time stamp configuration is in the current user's timezone."}
@@ -97,28 +89,71 @@ Other users viewing those fields or the workflow will see the value automaticall
 
 :::
 
-To configure a wait step, select when you would like to [resume workflow:]{.smallcaps}
+To configure a wait step, select when you would like to [resume workflow]{.smallcaps}
 
 | Option | Required field(s) | Description |
 |---:|---|---|
 | After Time Interval  | [wait duration]{.smallcaps} | Wait for a set amount of time. Applies to all models under the workflow. |
 | At Specified Date | [wait until]{.smallcaps} | Wait until a specific timestamp. Applies to all models under the workflow. If the milestone date inputted is in the past, the next workflow step will display immediately. |
 | At Specified Date on Model Field | [model field]{.smallcaps}^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] | Wait until a specific timestamp as defined by a model inventory field on a per model basis. If the selected field is empty^[Make model inventory fields **[required when creating models]{.smallcaps}** to ensure necessary fields have valid values.] or the milestone date inputted is in the past, the next workflow step will display immediately. |
-| Time Delta from Specified Date on Model Field | [model field]{.smallcaps},^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] [time delta direction]{.smallcaps}, [wait duration]{.smallcaps} | Wait for a calculated time relative to a date in a model field on a per model basis. If the selected field is empty^[Make model inventory fields **[required when creating models]{.smallcaps}** to ensure necessary fields have valid values.] or the milestone date inputted is in the past, the next workflow step will display immediately. |
+| Time Delta from Specified Date on Model Field | [model field]{.smallcaps}, [time delta direction]{.smallcaps}, [wait duration]{.smallcaps} | Wait for a calculated time relative to a date in a model field on a per model basis. If the selected field is empty^[Make model inventory fields **[required when creating models]{.smallcaps}** to ensure necessary fields have valid values.] or the milestone date inputted is in the past, the next workflow step will display immediately. |
 : **{{< fa clock >}} Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
-### Workflow Logic
-
-#### {{< fa arrow-right-arrow-left >}} Run Workflow
+### {{< fa arrow-right-arrow-left >}} Run Workflow
 
 Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
 
-#### {{< fa circle-stop >}} End
+### {{< fa circle-nodes >}} Webhook
+
+When a workflow reaches a webhook step, the workflow will pause. Listen for a `POST` request to resume the workflow:
+
+::: {.panel-tabset}
+
+#### 1. Copy webhook URL
+
+- Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard.
+
+- This webhook URL is where you should send your `POST` request.
+
+#### 2. Configure and copy payload
+
+1. Under [select target model for payload]{.smallcaps}, choose a model from your inventory^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)] to populate the target for the payload.
+
+2. Click **{{< fa copy >}} Copy** to the right of Payload to copy the payload to your clipboard.
+
+    Include this payload when you send your `POST` request to the webhook URL.
+
+#### 3. Copy authentication headers
+
+- Click **{{< fa copy >}}** to the right of the `x-api-key` and its value to copy them to your clipboard.
+
+- Click **{{< fa copy >}}** to the right of the `x-api-secret` and its value to copy them to your clipboard.
+
+Send your `POST` request to the webhook URL and include these headers with your request to authenticate your call.
+
+:::
+
+### {{< fa cloud-arrow-up >}} HTTP Request
+
+Sends a HTTP request with optional additional conditions.^[[Conditional requirements](/guide/workflows/conditional-requirements.qmd#http-request-optional)]
+
+| Field | Description |
+|---:|---|
+| [url]{.smallcaps} | Enter in the URL to send the HTTP request to. |
+| [method]{.smallcaps} | Select the HTTP request method: `GET`, `POST`, `PUT`, `DELETE`[^request-types] |
+| [timeout (seconds)]{.smallcaps} | Enter in a request timeout in seconds.[^request-timeout] |
+| [fail on non-]{.smallcaps}[2]{.smallercaps}[xx]{.smallcaps}  (optional) | Toggle whether or not the request will be considered failed if the response status code is not in the `2xx` range. |
+| [allow invalid certificates]{.smallcaps} (optional) | Toggle whether or not the request will be allowed to use invalid certificates. |
+| [follow redirects]{.smallcaps} (optional) | Toggle whether or not the request will follow redirects. |
+| [require https]{.smallcaps} (optional) | Toggle whether or not the request will require HTTPS. |
+| [headers]{.smallcaps} (optional) | Include headers with your request.[^request-headers] |
+: **{{< fa cloud-arrow-up >}} HTTP Request** step configuration {.hover tbl-colwidths="[30,70]"}
+
+
+### {{< fa circle-stop >}} End
 
 - Designates the end of your workflow.
 - Use this step when all of your other steps have been configured and linked together.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
-:::
-
 
 <!-- ADDITIONAL FOOTNOTES -->
 
@@ -141,6 +176,21 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
     1. Include optional details about the model the workflow is running on using the **{ } Insert Variable** drop-down.
     2. Click on the **Preview** tab and choose a model under **[select model for preview]{.smallcaps}** to confirm how the notification will appear when rendered.
+
+[^request-types]: `PUT` and `POST` requests have additional configuration fields:
+
+    - **[body type]{.smallcaps}** — Select whether the body is `JSON` or `Text`.
+    - **[body]{.smallcaps}** — Enter in your payload.
+
+[^request-timeout]: Max 300 seconds, or enter `0` to disable timeout.
+
+[^request-headers]:
+
+    1. Click **{{< fa plus >}} Add Header** to enter a header.
+    2. Provide a **Header Name** and **Header Value**.
+
+
+
 ::::
 
 
@@ -178,6 +228,14 @@ Creates a time condition for displaying next available action.
 #### {{< fa arrow-right-arrow-left >}} Run Workflow
 
 Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**, allowing you to chain workflows.
+
+#### {{< fa circle-nodes >}} Webhook
+
+When a workflow reaches a webhook step, the workflow will pause. Listen for a `POST` request to resume the workflow.
+
+#### {{< fa cloud-arrow-up >}} HTTP Request
+
+Send a HTTP request.
 
 #### {{< fa circle-stop >}} End
 
