Reshuffle content and add overview context

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -15,6 +15,8 @@ listing:
 
 Integrations connect ValidMind with the external tools your teams rely on so data, workflows, and reporting stay aligned without manual handoffs.
 
+## Use cases
+
 With integrations, you can:
 
 - Exchange data between ValidMind and other platforms.
@@ -23,7 +25,48 @@ With integrations, you can:
 - Perform actions in another system when events occur on the {{< var vm.platform >}}.
 - Standardize authentication and permissions to manage access consistently.
 
-### Key concepts
+### Analytics
+
+- ValidMind has built in analytics and dashboarding
+- Analytics can be imported into other reporting tools
+- Supported: Microsoft Power BI, Looker (coming soon), Snowflake (coming soon)
+
+### Model inventory
+
+- ValidMind can link to models in external systems
+- Continuous data synchronization
+- Supported: AWS SageMaker, GitLab, MLFlow, AWS Bedrock (coming soon), Databricks (coming soon)
+
+### Workflow tools
+
+- ValidMind can link to tickets in external systems
+- Continuous data synchronization
+- Tickets link to ValidMind Findings
+- Supported: ServiceNow and Atlassian Jira
+
+### Webhooks
+
+- Webhooks integrate with ValidMind workflows
+- Start workflows from webhooks
+<!-- - Send webhooks from workflows -->
+- Pause workflows and wait for webhooks to continue
+
+### Public API
+
+- ValidMind provides a public HTTP REST API
+- CRUD operations on all ValidMind resources
+- Examples: create model, set model to “in validation”
+
+### Testing, findings, and documentation
+
+- Python library exposes Python API
+- Running tests generates documentation
+- Uploading results to ValidMind
+- Supports ongoing monitoring
+- Supports integration with other platforms
+- Supported: MLflow, SageMaker
+
+## Key concepts
 
 **Integration**
 : The part of ValidMind designed to exchange data or actions with another system, such as REST APIs or webhooks.
@@ -39,16 +82,6 @@ With integrations, you can:
 
 **Webhook**
 : A workflow step that does the opposite to an HTTP request. Another system sends a POST request to a secure ValidMind URL to start the workflow.
-
-### How workflows support integrations
-
-With workflows, you can let ValidMind exchange information with any supported external system or service that can send or receive standard HTTP calls.
-
-An *HTTP request* step sends data from ValidMind to another service. A workflow can notify a partner tool when a model reaches a certain state or request an update in an external system. This pattern is useful when ValidMind owns the event and needs to push it outward.
-
-A *webhook* step does the opposite. Another system sends a POST request to a secure ValidMind URL to start the workflow. This lets external tools trigger actions inside ValidMind when an event occurs on their side.
-
-Together these steps support event driven exchange, keep integrations flexible, and allow teams to coordinate lifecycle, compliance, and reporting activity with systems that do not yet have dedicated connectors.
 
 :::{#integrations-listing}
 :::
