Another unhappy file rename, interim edits, getting ready for more overhaul

--- a/site/guide/integrations/connect-in-workflows.qmd
+++ b/site/guide/integrations/connect-in-workflows.qmd
@@ -1,9 +1,19 @@
 ---
-title: "Connect through workflows"
+title: "Connect in workflows"
 date: last-modified
 ---
 
 Use HTTP request steps to send data from ValidMind to another service, configure workflows to start when external systems send webhook POST requests, or add webhook step triggers that pause workflow execution until an external system sends a POST request.
+
+## How workflows support integrations
+
+With workflows, you can let ValidMind exchange information with any supported external system or service that can send or receive standard HTTP calls.
+
+An *HTTP request* step sends data from ValidMind to another service. A workflow can notify a partner tool when a model reaches a certain state or request an update in an external system. This pattern is useful when ValidMind owns the event and needs to push it outward.
+
+A *webhook* step does the opposite. Another system sends a POST request to  start a ValidMind workflow or to continue a workflow that is paused while waiting for a webhook to continue. This lets external tools trigger actions inside ValidMind when an event occurs on their side.
+
+Together these steps support event driven exchange, keep integrations flexible, and allow teams to coordinate lifecycle, compliance, and reporting activity with systems that do not yet have dedicated connectors.
 
 ::: {.attn}
 
