--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -13,58 +13,77 @@ listing:
       - configure-connections.qmd
 ---
 
-Integrations connect ValidMind with the external tools your teams rely on so data, workflows, and reporting stay aligned without manual handoffs.
+Integrations connect the {{< var validmind.platform >}} with external systems or services and keep information synchronized. 
 
-## Use cases
+Integrations can react to external events and trigger actions inside the {{< var vm.platform >}}. They can also send updates back to other systems when activities occur in the {{< var vm.platform >}}. This bidirectional flow reduces manual updates and helps maintain a single, reliable source of information. Standardized authentication and permissions to support predictable access control.
 
-With integrations, you can:
+## What you can do with integrations
 
-- Exchange data between ValidMind and other platforms.
-- Sync data across systems to maintain a single source of truth.
-- Trigger downstream actions in workflows on the {{< var vm.platform >}} when events in another system occur.
-- Perform actions in another system when events occur on the {{< var vm.platform >}}.
-- Standardize authentication and permissions to manage access consistently.
+:::: { .columns }
 
-### Analytics
+::: {.column width="50%" .pr2}
+### Analytics and reporting
 
-- ValidMind has built in analytics and dashboarding
-- Analytics can be imported into other reporting tools
-- Supported: Microsoft Power BI, Looker (coming soon), Snowflake (coming soon)
+- {{<var vm.product >}} provides built-in analytics and dashboarding
+- Import analytics into other reporting tools
 
+Supports: Microsoft Power BI, Looker (coming soon), Snowflake (coming soon)
+:::
+
+::: {.column width="50%" .pl2}
 ### Model inventory
 
-- ValidMind can link to models in external systems
+- {{<var vm.product >}} can link to models in external systems
 - Continuous data synchronization
-- Supported: AWS SageMaker, GitLab, MLFlow, AWS Bedrock (coming soon), Databricks (coming soon)
+- Supports: AWS SageMaker, GitLab, MLFlow, AWS Bedrock (coming soon), Databricks (coming soon)
+:::
 
-### Workflow tools
+::::
 
-- ValidMind can link to tickets in external systems
+:::: { .columns }
+
+::: {.column width="50%" .pr2}
+### Workflows
+
+- {{<var vm.product >}} can link to tickets in external systems
 - Continuous data synchronization
 - Tickets link to ValidMind Findings
-- Supported: ServiceNow and Atlassian Jira
+- Supports: ServiceNow and Atlassian Jira
+:::
 
-### Webhooks
+::: {.column width="50%" .pl2}
+### Webhook triggers
 
-- Webhooks integrate with ValidMind workflows
+- Webhooks integrate with {{<var vm.product >}} workflows
 - Start workflows from webhooks
 <!-- - Send webhooks from workflows -->
 - Pause workflows and wait for webhooks to continue
+:::
 
-### Public API
+::::
 
-- ValidMind provides a public HTTP REST API
+:::: { .columns }
+
+::: {.column width="50%" .pr2}
+### Public REST API
+
+- {{<var vm.product >}} provides a public HTTP REST API
 - CRUD operations on all ValidMind resources
 - Examples: create model, set model to “in validation”
+:::
 
-### Testing, findings, and documentation
+::: {.column width="50%" .pl2}
+### Testing & documentation
 
 - Python library exposes Python API
-- Running tests generates documentation
-- Uploading results to ValidMind
+- Run tests and test suites 
+- Generate documentation
 - Supports ongoing monitoring
-- Supports integration with other platforms
-- Supported: MLflow, SageMaker
+- Integrates with other platforms
+- Supports: MLflow, SageMaker
+:::
+
+::::
 
 ## Key concepts
 
