Move glossary content, more comprehensive intro, rework what was use case section

--- a/site/about/glossary/glossary.qmd
+++ b/site/about/glossary/glossary.qmd
@@ -17,6 +17,7 @@ This glossary of terms provides short definitions for technical terms you find c
 - [Validation reports](#validation-reports)
 - [Ongoing monitoring](#ongoing-monitoring)
 - [Attestations](#attestations)
+- [Integrations](#integrations)
 - [Developer tools](#developer-tools)
 - [Artificial intelligence](#artificial-intelligence)
 
@@ -45,6 +46,10 @@ This glossary of terms provides short definitions for technical terms you find c
 ## Attestations
 
 {{< include _attestation.qmd >}}
+
+## Integrations
+
+{{< include _integrations.qmd >}}
 
 ## Developer tools
 
