Tighten up intro

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -15,9 +15,12 @@ listing:
 
 Integrations connect the {{< var validmind.platform >}} with external systems or services, enabling bidirectional data synchronization, workflow automation, and API access.
 
-The {{< var validmind.platform >}} supports various integration patterns to keep information synchronized between systems and reduce manual updates. Integrations can react to external events and trigger actions inside the {{< var vm.platform >}}, or send updates back to other systems when activities occur in the {{< var vm.platform >}}. This bidirectional flow helps maintain a single, reliable source of information while supporting standardized authentication and predictable access control.
+The {{< var validmind.platform >}} supports various integration patterns to keep information synchronized between systems and reduce manual updates:
 
-Through integrations, you can connect to analytics and reporting tools, link model inventories with external systems, coordinate workflows with ticket management platforms, trigger workflows via webhooks, access the platform through a public REST API, and integrate testing and documentation capabilities with development platforms.
+- React to external events and trigger actions inside the {{< var vm.platform >}}
+- Send updates back to other systems when activities occur in the {{< var vm.platform >}}. 
+
+This bidirectional flow helps maintain a single, reliable source of information while supporting standardized authentication and predictable access control.
 
 ## What you can do with integrations
 
